--- a/packages/l10n/l10n.yaml
+++ b/packages/l10n/l10n.yaml
@@ -1,4 +1,5 @@
-arb-dir: lib/core/l10n
+arb-dir: arb
+output-dir: lib/src
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 output-class: AppLocalizations
